# pyroll-core

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.md  ROADMAP.md  Untitled.ipynb  generic_split.py  hatch.toml  paper.bib  paper.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.gitlab/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.gitlab/issue_templates/: bug_report.md  feature_request.md
docs/: cli.md  conf.py  export.md  grooves.md  index.md  main.md  models.md  plugins.md  profile.md  report.md  requirements.txt  units.md
docs/grooves/: grooves.md
docs/grooves/boxes/: box.md  constricted_box.dxf  constricted_box.md
docs/grooves/diamonds/: diamond.md  square.md
docs/grooves/ovals/: circular_oval.md  constricted_swedish_oval.dxf  constricted_swedish_oval.md  flat_oval.md  oval_3radii.dxf  oval_3radii.md  oval_3radii_flanked.md  swedish_oval.dxf  swedish_oval.md
docs/grooves/rounds/: false-round.md  false_round.dxf  round.md
docs/img/: box.dxf  circular_oval.dxf  diamond.dxf  flat_oval.dxf  general-groove.dxf  oval_3radii_flanked.dxf  round.dxf  square.dxf  task_chart_roll_pass_hooks.py
docs/units/: roll_pass.md  transport.md  units.md
pyroll/: __init__.py  __main__.py
pyroll/core/: __init__.py  config.py  dimensions.py  exceptions.py  hooks.py  log.py  plugin_host.py  repr.py  sequence.py  shapes.py  solve.py  unit.py
pyroll/core/disk_element/: __init__.py  disk_element.py  disked_unit.py  hookimpls.py
pyroll/core/disk_elements/: __init__.py  disk_element_unit.py  hookimpls.py
pyroll/core/engine/: __init__.py  engine.py  hookimpls.py
pyroll/dummy_plugin/: __init__.py
pyroll/ui/: __init__.py  pluggy.py
pyroll/utils/: __init__.py  hookutils.py  plugin_host.py
tests/: test_config.py  test_copy.py  test_dummy_plugin.py  test_pass_sequence.py  test_pylint.py  test_repr.py  test_shapes.py  test_solve.py  test_solve3.py  test_solve_asymmetric.py  test_solve_disks.py  test_solve_round_constricted_box_spreading.py  test_solve_round_flat_spreading.py  test_solve_round_oval_round_spreading.py  test_solve_spreading.py  test_solve_square_oval_spreading.py  test_square_bulging.py
tests/cli/: config.yaml  test_create_config.py  test_export.py  test_input_solve_report.py  test_plugins.py
tests/cooling_pipe/: test_cooling_pipe_values.py
tests/engine/: test_engine.py  test_rotational_frequency.py
tests/grooves/: edge_groove.py  swedish_oval_test_groove.dxf  test_box.py  test_circular_oval.py  test_constrcited_swedish_oval.py  test_constricted_box.py  test_constricted_circular_oval.py  test_constricted_swedish_oval.py  test_constricted_upset_box.py  test_create_groove.py  test_diamond.py  test_equivalent_ribbed_groove.py  test_false_round.py  test_flat.py  test_flat_oval.py  test_generic_for_errors.py  test_gothic.py  test_groove_plot.py  test_hexagonal.py  test_oval_3radii.py  test_oval_3radiii_flanked.py  test_pad.py  test_round.py  test_slitting.py  test_spline.py  test_square.py  test_swedish_oval.py  test_upset_box.py  test_upset_oval.py
tests/hooks/: test_extension_class.py  test_hook_functions.py
tests/pass_sequence/: test_by_position.py  test_pass_sequence_backward_velocity_calculation.py  test_pass_sequence_flatten.py  test_pass_sequence_forward_velocity_calculation.py  test_pass_sequence_from_elongations.py  test_pass_sequence_interstand_tension_from_reduction.py  test_pass_sequence_velocity_calculation.py  test_velocity_calculation.py
tests/profiles/: test_constructors.py  test_fits_material.py  test_local_height.py  test_meter_weight.py  test_plot.py  test_profile_contours.py  test_profile_contours_3fold.py  test_profile_plot.py  test_profile_refinement.py
tests/roll/: test_nominal_diameter.py  test_roll_contact_areas.py  test_roll_contact_areas_3fold.py  test_roll_surface_interpolation.py  test_times.py  test_working_radius_from_lee_paper.py
tests/roll_pass/: test_plot.py  test_roll_pass_plot.py  test_roll_pass_profile_location.py  test_roll_pass_profile_locations_disks.py  test_roll_pass_technological_orientation.py  test_three_roll_pass.py
tests/shear/: test_shear_length.py
tests/transport/: test_transport_length.py
tests/unit/: test_additional_inits.py  test_post_processors.py  test_pre_processors.py
tests/utlis/: test_for_materials.py
(+197 files in other folders)
