[tool.poetry]
name = "pyroll"
version = "1.0.0"
description = "PyRoll rolling simulation framework - core library."
authors = [
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io"
repository = "https://github.com/pyroll-project/pyroll-core"
documentation = "https://pyroll.readthedocs.io/en/latest"
packages = [
    { include = "pyroll/core" },
    { include = "pyroll/ui" },
    { include = "pyroll/utils" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
scipy = "^1.8.0"
Jinja2 = "^3.0.3"
click = "^8.0.0"
PyYAML = "^6.0"
makefun = "^1.13.1"
pluggy = "^1.0.0"
pandas = "^1.4.1"
lxml = "^4.7.1"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
Sphinx = "^4.5.0"
myst-parser = "^0.18.0"
ipython = "^8.3.0"

[tool.poetry.scripts]
pyroll = 'pyroll.ui.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
