[tool.poetry]
name = "pyroll-core"
version = "2.0.0a3-1"
description = "PyRoll rolling simulation framework - core library."
authors = [
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io"
repository = "https://github.com/pyroll-project/pyroll-core"
documentation = "https://pyroll.readthedocs.io/en/latest"
packages = [
    { include = "pyroll/core" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.21.4"
scipy = "^1.8.0"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
