[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroll-core"
description = "PyRoll rolling simulation framework - core library."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Matthias Schmidtchen", email = "matthias.schmidtchen@imf.tu-freiberg.de" },
    { name = "Max Stirl", email = "max.stirl@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]
requires-python = ">=3.9"

dependencies = [
    "numpy ~= 2.0",
    "scipy ~= 1.13",
    "shapely >= 2.0.6, <3.0",
]

dynamic = ["version"]

[project.optional-dependencies]
plot = [
    "matplotlib ~= 3.7"
]
matplotlib = [
    "matplotlib ~= 3.7"
]
plotly = [
    "plotly ~= 5.18",
    "pandas ~= 2.0",
]
dxf = [
    "ezdxf-shapely ~= 1.0",
]

[project.urls]
Homepage = "https://pyroll-project.github.io"
Repository = "https://github.com/pyroll-project/pyroll-core"
Documentation = "https://pyroll.readthedocs.io/en/latest"

[tool.pytest.ini_options]
filterwarnings = [
#    "error",
    'ignore:Matplotlib is currently using:UserWarning',
    'ignore:More than 20 figures have been opened:RuntimeWarning',
]

